# tienda_mixta

./: .pre-commit-config.yaml  LICENSE  Procfile  README.md  TRADUCCIONES_CORREGIDAS.md  pyproject.toml
.github/workflows/: ci.yml
config/: redis_cache.conf  redis_queue.conf
config/pids/: redis_queue.rdb
env/: pyvenv.cfg
logs/: database.log.1  database.log.4
sites/: apps.json  apps.txt  common_site_config.json
sites/assets/: assets-rtl.json  assets.json  erpnext  frappe  hrms  payments  tienda_mixta
sites/assets/locale/bs/LC_MESSAGES/: hrms.mo
sites/assets/locale/fa/LC_MESSAGES/: hrms.mo
sites/assets/locale/hr/LC_MESSAGES/: hrms.mo
sites/assets/locale/sr/LC_MESSAGES/: hrms.mo
sites/assets/locale/sr_CS/LC_MESSAGES/: hrms.mo
sites/assets/locale/sv/LC_MESSAGES/: hrms.mo
sites/tienda-mixta-la-40/: site_config.json
sites/tienda-mixta-la-40/logs/: database.log.2  database.log.3  database.log.5  database.log.6  database.log.7
sites/tienda-mixta-la-40/private/backups/: 20251120_223002-tienda-mixta-la-40-site_config_backup.json
tienda_mixta/: apply_translations.py  hooks.py  modules.txt  translations.py  utils.py
tienda_mixta/commands/: __init__.py
tienda_mixta/public/: README.md
tienda_mixta/public/css/: assets.css  custom.css  fonts.css  login.css
tienda_mixta/templates/: login.html
tienda_mixta/translations/: es.csv
tienda_mixta/www/: base_with_favicon.html
