[project]
name = "tienda_mixta"
authors = [
    { name = "El objetivo del repositorio es mantener el código fuente, configuraciones y futuras personalizaciones desarrolladas sobre el framework Frappe, permitiendo control de versiones, despliegue en otros equipos y colaboración entre desarrolladores.", email = "jjuansebarias@gmail.com"}
]
description = "Este proyecto corresponde a una instancia personalizada de ERPNext, instalada y configurada para servir como base de un sistema empresarial orientado a la gestión de inventarios, ventas, facturación y operaciones administrativas para una compañía de licores con ventas al por mayor y al detal."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
